force-app/main/default/objects/Case/fields/SLA_Hours__c.field-meta.xml
<CustomField>
    <fullName>SLA_Hours__c</fullName>
    <label>SLA Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>