force-app/main/default/objects/Case/fields/SLA_Start__c.field-meta.xml
<CustomField>
    <fullName>SLA_Start__c</fullName>
    <label>SLA Start</label>
    <type>DateTime</type>
</CustomField>